--- a/app/src/main/res/layout/item_tacheco.xml
+++ b/app/src/main/res/layout/item_tacheco.xml
@@ -25,7 +25,7 @@
             >
 
             <TextView
-                android:id="@+id/nom"
+                android:id="@+id/constraint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="682dp"
@@ -52,7 +52,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.46"
-                app:layout_constraintStart_toEndOf="@+id/nom"
+                app:layout_constraintStart_toEndOf="@+id/constraint"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.046"
                 tools:text="date 1" />
