--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#8ac249</color>
+    <color name="colorPrimaryDark">#679e38</color>
+    <color name="colorAccent">#FE5622</color>
 </resources>
