--- a/app/src/main/res/menu/activity_tache_detail.xml
+++ b/app/src/main/res/menu/activity_tache_detail.xml
@@ -5,6 +5,10 @@
 android:id="@+id/action_save"
     app:showAsAction="always"
     android:icon="@drawable/icon_save"
-
-   android:title="Enregistre"/>
+   android:title="Enregistrer"/>
+    <item
+        android:id="@+id/action_delete"
+        android:icon="@drawable/outline_delete_forever_white_24dp"
+        android:title="supprimmer"
+        app:showAsAction="always" />
 </menu>
