--- a/app/src/main/res/menu/activity_tache_detail.xml
+++ b/app/src/main/res/menu/activity_tache_detail.xml
@@ -10,5 +10,5 @@ android:id="@+id/action_save"
         android:id="@+id/action_delete"
         android:icon="@drawable/outline_delete_forever_white_24dp"
         android:title="supprimmer"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
