--- a/app/src/main/res/layout/activity_tache_detail.xml
+++ b/app/src/main/res/layout/activity_tache_detail.xml
@@ -44,7 +44,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:title="Cree Note"
+        app:title="Cree Tache"
         android:background="?attr/colorPrimary"
 
         app:layout_constraintTop_toTopOf="parent" />
